# constitutional-ai

./: .flake8  .gitignore  LICENSE  MANIFEST.in  MYPY_ANALYSIS_REPORT.md  README.md  codecov.yml  fix_and_test_demos.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_example.py  test_imports.py
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  code-quality.yml  dependency-review.yml
constitutional_ai/: __init__.py  config.py  critique_revision.py  data_utils.py  evaluator.py  filter.py  framework.py  hf_api_evaluator.py  model_utils.py  pipeline.py  ppo_trainer.py  preference_comparison.py  principles.py  reward_model.py  trainer.py
demos/: full_training_demo.py  gradio_demo.py  real_training_demo.py
demos/demo_utils/: __init__.py  examples.py  formatters.py  model_manager.py  training_handler.py  visualizations.py
examples/: custom_principles.py  evaluation_modes.py  ppo_training.py  quickstart.py  reward_model_training.py
scripts/: train_constitutional_checkpoint.py
tests/: test_critique_revision.py  test_data_utils.py  test_evaluator.py  test_filter.py  test_framework.py  test_hf_api_evaluator.py  test_model_utils.py  test_pipeline.py  test_ppo_trainer.py  test_preference_comparison.py  test_principles.py  test_reward_model.py  test_trainer.py
tests/mocks/: __init__.py  framework.py  hf_api.py  transformers.py
