[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-ai"
version = "0.1.0-alpha"
description = "Research implementation of Constitutional AI methodology"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["constitutional-ai", "ai-safety", "research", "experimental", "education"]
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
  {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=1.13.0",
  "transformers>=4.30.0",
  "tqdm>=4.65.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=22.0.0",
  "flake8>=4.0.0",
  "mypy>=0.950",
  "isort>=5.10.0",
]
api = [
  "requests>=2.28.0",
]
demos = [
  "gradio>=3.0.0",
  "matplotlib>=3.5.0",
]
all = [
  "constitutional-ai[dev,api,demos]",
]

[project.urls]
Homepage = "https://github.com/yourusername/constitutional-ai"  # Update with actual URL
Repository = "https://github.com/yourusername/constitutional-ai"  # Update with actual URL
"Bug Tracker" = "https://github.com/yourusername/constitutional-ai/issues"  # Update with actual URL

[tool.setuptools]
packages = ["constitutional_ai"]

[tool.setuptools.package-data]
constitutional_ai = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["constitutional_ai"]
omit = ["*/tests/*", "*/demos/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]
per-file-ignores = {"__init__.py" = ["F401"]}
